--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.theguardian.com/job/6990165/senior-hr-coordinator-advertising/?TrackID=15'>Senior HR Coordinator - Advertising job with BIS RECRUIT | Guardian Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999698355434-ui-ux-designer'>Cermati.com UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -150,7 +154,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
+<h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -196,13 +200,13 @@
 <p><span class="badge badge-light">Manchester Manchester Manchester</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6987446/grant-officer-/?LinkSource=PremiumListing'>Grant Officer  job with WORLD GREEN BUILDING COUNCIL | Guardian Jobs</a></h5> 
+<h5><a href='https://jobs.theguardian.com/job/6987446/grant-officer-/?LinkSource=PremiumListing'>Grant Officer  job with WORLD GREEN BUILDING COUNCIL | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -263,7 +267,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -295,7 +299,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oU5l9fwd&__jvst=Employee&__jvsd=skusIhwK&__jvsc=Twitter&bid=nDBqlMwg'> Splash Damage Careers - UI Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=oU5l9fwd&__jvst=Employee&__jvsd=skusIhwK&__jvsc=Twitter&bid=nDBqlMwg'> Splash Damage Careers - UI Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -311,7 +315,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
+<h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
       UX/UI Designer - Admind
     </a></h5> 
 <p><span class="badge badge-light">Krak?w Krak?w</span></p>
@@ -329,7 +333,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.theguardian.com/job/6979308/recruitment-manager/?TrackID=12'>Recruitment Manager job with BIS RECRUIT | Guardian Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6979308/recruitment-manager/?TrackID=12'>Recruitment Manager job with BIS RECRUIT | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -337,7 +341,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqdQafwn&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nQUjlMwF'>ServiceNow Careers - Senior Front End Software Engineer - UI/UX Platform Engineering</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqdQafwn&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nQUjlMwF'>ServiceNow Careers - Senior Front End Software Engineer - UI/UX Platform Engineering</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -455,17 +459,13 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/medical-assistant-ii-uicc-cedar-rapids-family-medicine-and-pediatric-clinic-5584'>Medical Assistant II- UICC Cedar Rapids Family Medicine and Pediatric Clinic - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/medical-assistant-ii-uicc-cedar-rapids-family-medicine-and-pediatric-clinic-5584'>Medical Assistant II- UICC Cedar Rapids Family Medicine and Pediatric Clinic - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qeGaVfwJ&k=Job&j=o33Z9fwY&__jvst=Employee&__jvsd=sO3DJhwZ&__jvsc=Twitter&bid=nAAflMw1'> Splash Damage Careers - Senior UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
-<hr/>
-<h5><a href='https://integr8.join.com/jobs/450146-ux-ui-web-designer-m-w-d'>Job @ Integr8 media (Berlin): UX/UI Web Designer (... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
-<p>Posted on: 2019-10-26</p>
 <hr/>
 
 
